# monopoly-ui

./: .gitignore  AGENTS.md  deploy.sh  plan.md  technical_documents.md
backend/: Cargo.toml  README.md
backend/src/: lib.rs  main.rs
backend/src/game/: actions.rs  board.rs  cards.rs  logic.rs  mod.rs  state.rs  trade.rs
backend/src/room/: manager.rs  player.rs  room.rs
backend/src/ws/: handler.rs  messages.rs
frontend/: README.md  package-lock.json  package.json  simulator.ts  vite.config.ts
frontend/src/: App.tsx  index.css  store.ts
frontend/src/components/: Landing.tsx  Lobby.tsx
frontend/src/components/Game/: Board.tsx  CardModal.tsx  CardNotification.tsx  Controls.tsx  GameOverModal.tsx  JailModal.tsx  MoneyFloatingText.tsx  PlayerList.tsx  PropertyModal.tsx  VoteModal.tsx  index.tsx
frontend/src/components/Game/Trade/: IncomingTradeModal.tsx  TradeModal.tsx
frontend/src/context/: WebSocketContext.tsx
frontend/src/data/: board.ts
frontend/src/hooks/: useWebSocket.ts
frontend/src/types/: game.ts
frontend/src/utils/: logger.ts
